[package]
name = "quik-util"
version = "0.0.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/Enigmatrix/quik"
description = """
Utilities for the `quik` QUIC library
"""

[dependencies]
byteorder = "1.5.0"
tokio = { version = "1.14.0", default-features = false, features = ["sync"] }
