[package]
name = "quik"
version = "0.0.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/Enigmatrix/quik"
description = """
The `quik` QUIC library
"""

[dependencies]
quik-core = { path = "../quik-core", version = "0.0.7" }
quik-crypto = { path = "../quik-crypto", version = "0.0.7" }
