[package]
name = "qwik-crypto"
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Enigmatrix/qwik"
description = """
Default crypto primitives for the `qwik` QUIC library
"""

[dependencies]
qwik-util = { path = "../qwik-util", version = "0.3" }
qwik-core = { path = "../qwik-core", version = "0.3" }
hkdf = "0.12.4"
ring = "0.17.8"
